--- a/source/assets/sass/chunks/header/header.scss
+++ b/source/assets/sass/chunks/header/header.scss
@@ -174,6 +174,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    overflow: hidden;
   }
 
   .site-list {
@@ -183,7 +184,7 @@
     &__link {
       position: relative;
       display: block;
-      padding: 25px 25px;
+      padding: 25px 15px;
       transition: color 0.1s linear;
 
       &--active::before {
@@ -238,7 +239,7 @@
 
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
 
   .header-tablet {
 
@@ -313,6 +314,7 @@
     .login-icon {
       background-position: 20px center;
     }
+
   }
 
 }
