--- a/source/assets/sass/main.scss
+++ b/source/assets/sass/main.scss
@@ -25,9 +25,14 @@ a {
   color: inherit;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 body {
   margin: 0;
   font-family: 'PT Sans Narrow', Arial, sans-serif;
+  font-weight: 300;
   background-color: #fff;
 }
 
@@ -41,11 +46,29 @@ button {
   cursor: pointer;
 }
 
+.page-container {
+  overflow: hidden;
+}
+
 .container {
   padding: 0 20px;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 2px;
+  margin: -1px;
+  bottom: 0;
+  padding: 0;
+  white-space: no-wrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden
+}
+
 @import "./chunks/header/header";
+@import "./chunks/stats/stats";
 
 @media (min-width: 768px) {
 
@@ -57,7 +80,7 @@ button {
 
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
 
   .container {
     width: 960px;
