Added all blocks and styles on index.html

--- a/source/assets/sass/chunks/stats/stats.scss
+++ b/source/assets/sass/chunks/stats/stats.scss
@@ -184,7 +184,8 @@
 
   .stats {
     padding-top: 490px;
-    background-position: -8px -12%;
+    background-size: cover;
+    background-position: center;
 
     &__logo-link {
       position: absolute;
