--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -40,10 +40,18 @@ button {
   padding: 0;
   font-family: inherit;
   font-size: inherit;
-  color: #fff;
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.button {
+  width: 100%;
+  padding: 13px 20px;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: transparent;
+  border: solid 1px #e5ddd5;
 }
 
 .page-container {
@@ -67,6 +75,43 @@ button {
   overflow: hidden;
 }
 
+/* SLIDER */
+.slider {
+  width: 280px;
+  margin: 0 auto;
+}
+.slider__list {
+  display: flex;
+  overflow: hidden;
+}
+.slider__toggle {
+  width: 10px;
+  height: 10px;
+  margin: 0 10px;
+  font-size: 0;
+}
+.slider__toggle::after {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: solid 1px rgba(255, 255, 255, 0.6);
+  transform: rotate(45deg);
+  transition: background-color 0.1s;
+  content: "";
+}
+.slider__toggle:hover::after {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.slider__toggle.active::after {
+  background-color: rgb(255, 255, 255);
+}
+
+@media (min-width: 768px) {
+  .slider {
+    width: auto;
+  }
+}
 .header {
   background-color: #242424;
 }
@@ -461,7 +506,8 @@ button {
 @media (min-width: 960px) {
   .stats {
     padding-top: 490px;
-    background-position: -8px -12%;
+    background-size: cover;
+    background-position: center;
   }
   .stats__logo-link {
     position: absolute;
@@ -491,11 +537,427 @@ button {
     margin: 0 0 40px;
   }
 }
+.advantages {
+  position: relative;
+  padding-bottom: 10px;
+  background-color: #353535;
+  /*   &__slider {
+      width: 280px;
+      margin: 0 auto;
+    } */
+  /*   &__list {
+      display: flex;
+      overflow: hidden;
+    } */
+}
+.advantages__item {
+  min-width: 280px;
+  padding-top: 150px;
+  background-repeat: no-repeat;
+  background-position: center 20px;
+}
+.advantages__item--fast {
+  background-image: url("../images/advantages/fast.png");
+}
+.advantages__item--cool {
+  background-image: url("../images/advantages/cool.png");
+}
+.advantages__item--price {
+  background-image: url("../images/advantages/price.png");
+}
+.advantages__title {
+  margin-bottom: 20px;
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.advantages__desc {
+  margin-bottom: 20px;
+  padding: 0 20px;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+  color: #ffffff;
+}
+.advantages__toggles {
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .advantages__slider {
+    width: auto;
+  }
+  .advantages__list {
+    flex-wrap: wrap;
+  }
+  .advantages__item {
+    padding: 35px 0 35px 130px;
+    background-position: 0 center;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+  }
+  .advantages__item:last-child {
+    border-bottom: none;
+  }
+  .advantages__title {
+    margin-bottom: 10px;
+    text-align: left;
+  }
+  .advantages__desc {
+    margin-bottom: 0;
+    padding: 0;
+    text-align: left;
+  }
+  .advantages__toggles {
+    display: none;
+  }
+}
+@media (min-width: 960px) {
+  .advantages {
+    padding: 50px;
+  }
+  .advantages__item {
+    width: 33.33%;
+    min-width: 320px;
+    padding-top: 150px;
+    padding-left: 0;
+    padding: 0 45px;
+    padding: 150px 35px 0 35px;
+    background-repeat: no-repeat;
+    background-position: center 20px;
+    border-bottom: none;
+  }
+  .advantages__title {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .advantages__desc {
+    text-align: center;
+  }
+}
+.news {
+  padding: 70px 0 25px 0;
+  background-color: #f8f5f2;
+  border-bottom: solid 1px #e5ddd5;
+}
+.news__title {
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+}
+.news__item {
+  display: flex;
+  align-items: flex-start;
+  padding: 20px 0;
+  border-bottom: solid 1px #e5ddd5;
+}
+.news__item:last-child {
+  border-bottom: none;
+}
+.news__date {
+  margin-top: 5px;
+  padding: 5px 10px 3px 10px;
+  text-align: center;
+  background-color: #000000;
+  margin-right: 20px;
+}
+.news__day {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: center;
+  color: #ffffff;
+}
+.news__month {
+  font-size: 16px;
+  line-height: 16px;
+  color: #ffffff;
+}
+.news__text {
+  font-size: 18px;
+  color: #000000;
+}
+
+@media (min-width: 768px) {
+  .news {
+    padding-bottom: 5px;
+  }
+  .news .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .news__title {
+    margin-left: 40px;
+    margin-bottom: 55px;
+    font-size: 40px;
+  }
+  .news__list {
+    display: flex;
+    width: 100%;
+    order: 3;
+  }
+  .news__item {
+    width: 50%;
+    padding-right: 20px;
+    border-bottom: none;
+  }
+  .news__date {
+    margin-right: 10px;
+  }
+}
+.reviews {
+  padding: 25px 0 15px 0;
+  background-color: #f8f5f2;
+}
+.reviews__title {
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+}
+.reviews__write {
+  display: none;
+}
+.reviews__prev, .reviews__next {
+  display: none;
+}
+.reviews__list {
+  margin-bottom: 30px;
+}
+.reviews__item {
+  display: flex;
+  min-width: 280px;
+}
+.reviews__image {
+  margin-top: 5px;
+  margin-right: 20px;
+}
+.reviews__author {
+  font-size: 24px;
+  font-weight: 700;
+  font-style: normal;
+}
+.reviews__desc {
+  font-size: 18px;
+  line-height: 27px;
+}
+.reviews__toggles {
+  text-align: center;
+}
+.reviews__toggles .slider__toggle::after {
+  border: solid 1px rgba(54, 54, 54, 0.5);
+}
+.reviews__toggles .slider__toggle:hover::after {
+  background-color: rgba(54, 54, 54, 0.5);
+}
+.reviews__toggles .slider__toggle.active::after {
+  background-color: rgb(54, 54, 54);
+}
+
+@media (min-width: 768px) {
+  .reviews__slider {
+    position: relative;
+    display: flex;
+  }
+  .reviews__prev, .reviews__next {
+    display: block;
+    width: 50px;
+    font-size: 0;
+    border: solid 1px #e5ddd5;
+  }
+  .reviews__list {
+    width: 540px;
+    margin-bottom: 0;
+    border-top: solid 1px #e5ddd5;
+    border-bottom: solid 1px #e5ddd5;
+  }
+  .reviews__item {
+    min-width: 540px;
+    padding: 30px;
+  }
+  .reviews__image {
+    margin-top: 0;
+  }
+  .reviews__author-image {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+  }
+  .reviews__toggles {
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    padding: 0 20px;
+    background-color: #f8f5f2;
+    transform: translateX(-50%);
+  }
+}
+@media (min-width: 960px) {
+  .reviews {
+    padding-bottom: 100px;
+  }
+  .reviews__list {
+    width: 820px;
+    margin: 0 20px;
+  }
+  .reviews__item {
+    align-items: center;
+    min-width: 820px;
+    padding: 0;
+    border: solid 1px #e5ddd5;
+  }
+  .reviews__image {
+    margin-right: 65px;
+  }
+  .reviews__author-image {
+    width: 250px;
+    height: 160px;
+    border-radius: 0;
+  }
+  .reviews__toggles {
+    bottom: -50px;
+  }
+}
+.footer {
+  padding: 30px 0 20px 0;
+  background-color: #292929;
+}
+
+.contacts {
+  color: #ffffff;
+  padding-bottom: 25px;
+}
+.contacts__title {
+  display: block;
+  margin-bottom: 12px;
+  font-size: 18px;
+  text-align: center;
+}
+.contacts__address {
+  margin-bottom: 12px;
+  text-align: center;
+}
+.contacts__phone {
+  display: block;
+  text-align: center;
+  border: solid 1px rgba(255, 255, 255, 0.2);
+}
+
+.social {
+  margin-bottom: 20px;
+}
+.social__title {
+  font-size: 0;
+}
+.social__list {
+  display: flex;
+  width: 320px;
+  margin: 0 auto;
+  border: solid 1px rgba(255, 255, 255, 0.2);
+}
+.social__item {
+  width: 33.333%;
+  height: 103px;
+  font-size: 0;
+  border-right: solid 1px rgba(255, 255, 255, 0.2);
+}
+.social__item:last-child {
+  border-right: none;
+}
+.social__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.social__link--vk {
+  background-image: url("../images/social/vk.png");
+}
+.social__link--fb {
+  background-image: url("../images/social/facebook.png");
+}
+.social__link--ig {
+  background-image: url("../images/social/insta.png");
+}
+
+.copyright__text {
+  margin-bottom: 10px;
+  font-size: 18px;
+  text-align: center;
+  color: #ffffff;
+}
+.copyright__link {
+  display: block;
+  text-align: center;
+  color: #ffffff;
+}
+
+@media (min-width: 768px) {
+  .footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .footer__social {
+    width: 100%;
+    order: 3;
+  }
+  .contacts {
+    width: 320px;
+  }
+  .contacts__title {
+    text-transform: uppercase;
+    text-align: left;
+  }
+  .contacts__address {
+    text-align: left;
+  }
+  .contacts__phone {
+    padding: 0;
+    font-weight: 300;
+    text-align: left;
+    border: none;
+  }
+  .social__list {
+    width: 100%;
+  }
+}
+@media (min-width: 960px) {
+  .footer__social {
+    width: 320px;
+    order: 0;
+  }
+  .social__title {
+    display: block;
+    margin-bottom: 20px;
+    font-size: 18px;
+    color: #ffffff;
+  }
+  .social__list {
+    border: none;
+  }
+  .social__item {
+    width: 50px;
+    height: 50px;
+    margin: 0 3px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+  }
+  .social__item:last-child {
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+  }
+}
 @media (min-width: 768px) {
   .container {
     width: 640px;
     margin: 0 auto;
     padding: 0;
+  }
+  .button {
+    width: 160px;
   }
 }
 @media (min-width: 960px) {
