--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -52,6 +52,17 @@ button {
   font-weight: 700;
   background-color: transparent;
   border: solid 1px #e5ddd5;
+  transition: background-color 0.1s linear, border-color 0.1s linear, color 0.1s linear;
+}
+
+.button:hover {
+  border-color: #d4cabe;
+}
+
+.button:active {
+  color: #a89e94;
+  background-color: #d5c9bd;
+  border-color: #d4cabe;
 }
 
 .page-container {
@@ -217,6 +228,7 @@ button {
   padding: 15px 20px 15px 50px;
   font-weight: 300;
   text-align: left;
+  color: #ffffff;
   transition: background-color 0.02s linear, color 0.02s linear;
 }
 .user-list__btn:hover {
@@ -244,7 +256,7 @@ button {
     display: block;
   }
   .header-tablet .container {
-    width: 690px;
+    width: 670px;
   }
   .nav {
     display: flex;
@@ -302,7 +314,7 @@ button {
 }
 @media (min-width: 960px) {
   .header-tablet .container {
-    width: 1010px;
+    width: 960px;
   }
   .site-list {
     display: flex;
@@ -339,10 +351,11 @@ button {
     text-transform: uppercase;
     transition: color 0.1s, background-color 0.1s;
     transition: color 0.1s, background-color 0.1s;
+    color: #ffffff;
   }
   .user-list__btn:hover {
     color: #000;
-    background-color: #fff;
+    background-color: #ffffff;
     opacity: 1;
   }
   .user-list__btn:active {
@@ -540,15 +553,20 @@ button {
 .advantages {
   position: relative;
   padding-bottom: 10px;
-  background-color: #353535;
-  /*   &__slider {
-      width: 280px;
-      margin: 0 auto;
-    } */
-  /*   &__list {
-      display: flex;
-      overflow: hidden;
-    } */
+  background-color: #242424;
+}
+.advantages::after {
+  position: absolute;
+  left: 50%;
+  bottom: -40px;
+  width: 100%;
+  height: 40px;
+  background-image: linear-gradient(to top right, transparent 50%, #242424 0), linear-gradient(to bottom right, #242424 50%, transparent 0);
+  background-size: 50% 100%;
+  background-repeat: no-repeat;
+  background-position: left, right;
+  transform: translateX(-50%);
+  content: "";
 }
 .advantages__item {
   min-width: 280px;
@@ -585,6 +603,12 @@ button {
 }
 
 @media (min-width: 768px) {
+  .advantages {
+    background-color: #353535;
+  }
+  .advantages::after {
+    background-image: linear-gradient(to top right, transparent 50%, #353535 0), linear-gradient(to bottom right, #353535 50%, transparent 0);
+  }
   .advantages__slider {
     width: auto;
   }
@@ -614,7 +638,11 @@ button {
 }
 @media (min-width: 960px) {
   .advantages {
-    padding: 50px;
+    padding: 50px 0;
+  }
+  .advantages::after {
+    height: 65px;
+    bottom: -65px;
   }
   .advantages__item {
     width: 33.33%;
@@ -645,22 +673,50 @@ button {
   font-size: 30px;
   font-weight: 700;
   text-align: center;
+  text-transform: uppercase;
 }
-.news__item {
+.news__link {
   display: flex;
   align-items: flex-start;
   padding: 20px 0;
   border-bottom: solid 1px #e5ddd5;
 }
-.news__item:last-child {
+.news__link:last-child {
   border-bottom: none;
 }
 .news__date {
+  position: relative;
   margin-top: 5px;
   padding: 5px 10px 3px 10px;
   text-align: center;
   background-color: #000000;
   margin-right: 20px;
+}
+.news__date::after {
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  width: 100%;
+  height: 10px;
+  background-image: linear-gradient(to top right, transparent 50%, #000000 0), linear-gradient(to bottom right, #000000 50%, transparent 0);
+  background-size: 50% 100%;
+  background-repeat: no-repeat;
+  background-position: left, right;
+  transform: translateX(-50%);
+  content: "";
+  transition: color 0.1s linear, background-color 0.1s linear, background-image 0.1s linear;
+}
+.news__link:hover .news__date {
+  background-color: #755b4c;
+}
+.news__link:hover .news__date::after {
+  background-image: linear-gradient(to top right, transparent 50%, #755b4c 0), linear-gradient(to bottom right, #755b4c 50%, transparent 0);
+}
+.news__link:active .news__date {
+  background-color: #694d38;
+}
+.news__link:active .news__date::after {
+  background-image: linear-gradient(to top right, transparent 50%, #694d38 0), linear-gradient(to bottom right, #694d38 50%, transparent 0);
 }
 .news__day {
   font-size: 30px;
@@ -674,9 +730,24 @@ button {
   line-height: 16px;
   color: #ffffff;
 }
+.news__day, .news__month {
+  transition: color 0.1s linear;
+}
+.news__link:active .news__day, .news__link:active .news__month {
+  color: rgba(255, 255, 255, 0.3);
+}
 .news__text {
   font-size: 18px;
   color: #000000;
+  transition: color 0.1s linear;
+}
+.news__link:hover .news__text {
+  color: #8a7061;
+  text-decoration: underline;
+}
+.news__link:active .news__text {
+  color: #755b4c;
+  text-decoration: underline;
 }
 
 @media (min-width: 768px) {
@@ -709,8 +780,22 @@ button {
   }
 }
 .reviews {
+  position: relative;
   padding: 25px 0 15px 0;
   background-color: #f8f5f2;
+}
+.reviews::after {
+  position: absolute;
+  left: 50%;
+  bottom: -39px;
+  width: 100%;
+  height: 40px;
+  background-image: linear-gradient(to top right, transparent 50%, #f8f5f2 0), linear-gradient(to bottom right, #f8f5f2 50%, transparent 0);
+  background-size: 50% 100%;
+  background-repeat: no-repeat;
+  background-position: left, right;
+  transform: translateX(-50%);
+  content: "";
 }
 .reviews__title {
   margin-bottom: 30px;
@@ -758,15 +843,49 @@ button {
 }
 
 @media (min-width: 768px) {
+  .reviews {
+    padding-bottom: 50px;
+  }
+  .reviews::after {
+    display: none;
+  }
+  .reviews .container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .reviews__write {
+    display: block;
+  }
   .reviews__slider {
     position: relative;
     display: flex;
   }
   .reviews__prev, .reviews__next {
+    position: relative;
     display: block;
     width: 50px;
     font-size: 0;
     border: solid 1px #e5ddd5;
+  }
+  .reviews__prev::after, .reviews__next::after {
+    position: absolute;
+    left: calc(50% - 6px);
+    bottom: calc(50% - 6px);
+    width: 12px;
+    height: 12px;
+    background-image: linear-gradient(to top right, transparent 50%, #000000 0), linear-gradient(to bottom right, #000000 50%, transparent 0);
+    background-size: 50% 100%;
+    background-repeat: no-repeat;
+    background-position: left, right;
+    content: "";
+  }
+  .reviews__prev::after {
+    transform: rotate(90deg);
+  }
+  .reviews__next::after {
+    transform: rotate(-90deg);
   }
   .reviews__list {
     width: 540px;
@@ -799,6 +918,11 @@ button {
   .reviews {
     padding-bottom: 100px;
   }
+  .reviews__title {
+    margin-left: 40px;
+    font-size: 40px;
+    text-align: left;
+  }
   .reviews__list {
     width: 820px;
     margin: 0 20px;
@@ -822,13 +946,17 @@ button {
   }
 }
 .footer {
-  padding: 30px 0 20px 0;
+  padding: 40px 0 20px 0;
   background-color: #292929;
+}
+.footer__wrapper {
+  padding: 0;
 }
 
 .contacts {
   color: #ffffff;
-  padding-bottom: 25px;
+  padding: 35px 20px 25px 20px;
+  border-top: solid 1px rgba(255, 255, 255, 0.2);
 }
 .contacts__title {
   display: block;
@@ -850,29 +978,38 @@ button {
   margin-bottom: 20px;
 }
 .social__title {
+  position: absolute;
   font-size: 0;
 }
 .social__list {
   display: flex;
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
-  border: solid 1px rgba(255, 255, 255, 0.2);
 }
 .social__item {
   width: 33.333%;
   height: 103px;
   font-size: 0;
-  border-right: solid 1px rgba(255, 255, 255, 0.2);
 }
 .social__item:last-child {
   border-right: none;
 }
 .social__link {
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
+  border: solid 1px rgba(255, 255, 255, 0.2);
+  transform: border-color 0.1s linear, background-color 0.1s linear;
+}
+.social__link:hover {
+  border-color: rgba(255, 255, 255, 0.5);
+}
+.social__link:active {
+  background-color: #252525;
+  border: none;
 }
 .social__link--vk {
   background-image: url("../images/social/vk.png");
@@ -884,6 +1021,9 @@ button {
   background-image: url("../images/social/insta.png");
 }
 
+.copyright {
+  padding: 0 20px;
+}
 .copyright__text {
   margin-bottom: 10px;
   font-size: 18px;
@@ -891,23 +1031,40 @@ button {
   color: #ffffff;
 }
 .copyright__link {
-  display: block;
+  display: inline-block;
   text-align: center;
   color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.2);
+}
+
+.footer__btn:hover {
+  border-color: rgba(255, 255, 255, 0.5);
+}
+
+.footer__btn:active {
+  color: rgba(255, 255, 255, 0.6);
+  background-color: #252525;
+  border-color: none;
 }
 
 @media (min-width: 768px) {
-  .footer .container {
+  .footer {
+    padding-top: 50px;
+  }
+  .footer__wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
   .footer__social {
     width: 100%;
+    margin-top: 20px;
     order: 3;
   }
   .contacts {
     width: 320px;
+    padding: 0;
+    border-top: none;
   }
   .contacts__title {
     text-transform: uppercase;
@@ -925,20 +1082,35 @@ button {
   .social__list {
     width: 100%;
   }
+  .copyright {
+    padding: 0;
+  }
 }
 @media (min-width: 960px) {
+  .footer__wrapper {
+    justify-content: flex-start;
+  }
   .footer__social {
     width: 320px;
     order: 0;
   }
+  .social {
+    min-width: 320px;
+    margin: 0;
+  }
   .social__title {
+    position: static;
     display: block;
     margin-bottom: 20px;
     font-size: 18px;
+    text-align: center;
     color: #ffffff;
   }
   .social__list {
     border: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   .social__item {
     width: 50px;
@@ -948,6 +1120,22 @@ button {
   }
   .social__item:last-child {
     border-right: 1px solid rgba(255, 255, 255, 0.2);
+  }
+  .social__link--vk {
+    background-size: auto 17px;
+  }
+  .social__link--fb {
+    background-size: auto 21px;
+  }
+  .social__link--ig {
+    background-size: auto 19px;
+  }
+  .copyright {
+    min-width: 320px;
+    text-align: right;
+  }
+  .copyright__text {
+    text-align: right;
   }
 }
 @media (min-width: 768px) {
