--- a/source/assets/sass/chunks/advantages/advantages.scss
+++ b/source/assets/sass/chunks/advantages/advantages.scss
@@ -1,17 +1,23 @@
 .advantages {
   position: relative;
   padding-bottom: 10px;
-  background-color: #353535;
+  background-color: #242424;
 
-/*   &__slider {
-    width: 280px;
-    margin: 0 auto;
-  } */
-
-/*   &__list {
-    display: flex;
-    overflow: hidden;
-  } */
+  &::after {
+    position: absolute;
+    left: 50%;
+    bottom: -40px;
+    width: 100%;
+    height: 40px;
+    background-image:
+      linear-gradient(to top right, transparent 50%, #242424 0),
+      linear-gradient(to bottom right, #242424 50%, transparent 0);
+    background-size: 50% 100%;
+    background-repeat: no-repeat;
+    background-position: left, right;
+    transform: translateX(-50%);
+    content: "";
+  }
 
   &__item {
     min-width: 280px;
@@ -32,7 +38,6 @@
     }
 
   }
-
 
   &__title {
     margin-bottom: 20px;
@@ -61,6 +66,12 @@
 @media (min-width: 768px) {
 
   .advantages {
+    background-color: #353535;
+    &::after {
+      background-image:
+        linear-gradient(to top right, transparent 50%, #353535 0),
+        linear-gradient(to bottom right, #353535 50%, transparent 0);
+    }
 
     &__slider {
       width: auto;
@@ -96,6 +107,7 @@
     &__toggles {
       display: none;
     }
+
   }
 
 }
@@ -103,7 +115,12 @@
 @media (min-width: 960px) {
 
   .advantages {
-    padding: 50px;
+    padding: 50px 0;
+
+    &::after {
+      height: 65px;
+      bottom: -65px;
+    }
 
     &__item {
       width: 33.33%;
