--- a/source/assets/sass/chunks/footer/footer.scss
+++ b/source/assets/sass/chunks/footer/footer.scss
@@ -1,12 +1,17 @@
 .footer {
-  padding: 30px 0 20px 0;
+  padding: 40px 0 20px 0;
   background-color: #292929;
+
+  &__wrapper {
+    padding: 0;
+  }
 
 }
 
 .contacts {
   color: #ffffff;
-  padding-bottom: 25px;
+  padding: 35px 20px 25px 20px;
+  border-top: solid 1px rgba(255, 255, 255, 0.2);
 
   &__title {
     display: block;
@@ -32,21 +37,20 @@
   margin-bottom: 20px;
 
   &__title {
+    position: absolute;
     font-size: 0;
   }
 
   &__list {
     display: flex;
-    width: 320px;
+    width: 100%;
     margin: 0 auto;
-    border: solid 1px rgba(255, 255, 255, .2);
   }
 
   &__item {
     width: 33.333%;
     height: 103px;
     font-size: 0;
-    border-right: solid 1px rgba(255, 255, 255, .2);
 
     &:last-child {
       border-right: none;
@@ -55,11 +59,24 @@
   }
 
   &__link {
+    position: relative;
     display: block;
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
     background-position: center;
+    border: solid 1px rgba(255, 255, 255, 0.2);
+    transform: border-color 0.1s linear,
+    background-color 0.1s linear;
+
+    &:hover {
+      border-color: rgba(255, 255, 255, 0.5);
+    }
+
+    &:active {
+      background-color: #252525;
+      border: none;
+    }
 
     &--vk {
       background-image: url("../images/social/vk.png");
@@ -78,6 +95,7 @@
 }
 
 .copyright {
+  padding: 0 20px;
 
   &__text {
     margin-bottom: 10px;
@@ -87,18 +105,30 @@
   }
 
   &__link {
-    display: block;
+    display: inline-block;
     text-align: center;
     color: #ffffff;
+    border-color: rgba(255, 255, 255, 0.2);
   }
 
+}
+
+.footer__btn:hover {
+  border-color: rgba(255, 255, 255, 0.5);
+}
+
+.footer__btn:active {
+  color: rgba(255, 255, 255, .6);
+  background-color: #252525;
+  border-color: none;
 }
 
 @media (min-width: 768px) {
 
   .footer {
+    padding-top: 50px;
 
-    .container {
+    &__wrapper {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -106,6 +136,7 @@
 
     &__social {
       width: 100%;
+      margin-top: 20px;
       order: 3;
     }
 
@@ -113,6 +144,9 @@
 
   .contacts {
     width: 320px;
+    padding: 0;
+    border-top: none;
+
 
     &__title {
       text-transform: uppercase;
@@ -139,11 +173,19 @@
 
   }
 
+  .copyright {
+    padding: 0;
+  }
+
 }
 
 @media (min-width: 960px) {
 
   .footer {
+
+    &__wrapper {
+      justify-content: flex-start;
+    }
 
     &__social {
       width: 320px;
@@ -153,16 +195,23 @@
   }
 
   .social {
+    min-width: 320px;
+    margin: 0;
 
     &__title {
+      position: static;
       display: block;
       margin-bottom: 20px;
       font-size: 18px;
+      text-align: center;
       color: #ffffff;
     }
 
     &__list {
       border: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     &__item {
@@ -174,6 +223,32 @@
       &:last-child {
         border-right: 1px solid rgba(255,255,255, 0.2)
       }
+
+    }
+
+    &__link {
+      &--vk {
+        background-size: auto 17px;
+      }
+
+      &--fb {
+        background-size: auto 21px;
+
+      }
+
+      &--ig {
+        background-size: auto 19px;
+      }
+
+    }
+
+  }
+
+  .copyright {
+    min-width: 320px;
+    text-align: right;
+    &__text {
+      text-align: right;
     }
   }
 
