--- a/source/assets/sass/chunks/news/news.scss
+++ b/source/assets/sass/chunks/news/news.scss
@@ -8,9 +8,13 @@
     font-size: 30px;
     font-weight: 700;
     text-align: center;
+    text-transform: uppercase;
   }
 
   &__item {
+  }
+
+  &__link {
     display: flex;
     align-items: flex-start;
     padding: 20px 0;
@@ -23,11 +27,54 @@
   }
 
   &__date {
+    position: relative;
     margin-top: 5px;
     padding: 5px 10px 3px 10px;
     text-align: center;
     background-color: #000000;
     margin-right: 20px;
+
+    &::after {
+      position: absolute;
+      left: 50%;
+      bottom: -10px;
+      width: 100%;
+      height: 10px;
+      background-image:
+        linear-gradient(to top right, transparent 50%, #000000 0),
+        linear-gradient(to bottom right, #000000 50%, transparent 0);
+      background-size: 50% 100%;
+      background-repeat: no-repeat;
+      background-position: left, right;
+      transform: translateX(-50%);
+      content: "";
+      transition: color 0.1s linear,
+      background-color 0.1s linear,
+      background-image 0.1s linear;
+    }
+
+  }
+
+  &__link:hover &__date{
+    background-color: #755b4c;
+
+    &::after {
+      background-image:
+      linear-gradient(to top right, transparent 50%, #755b4c 0),
+      linear-gradient(to bottom right, #755b4c 50%, transparent 0);
+    }
+
+  }
+
+  &__link:active &__date{
+    background-color: #694d38;
+
+    &::after {
+      background-image:
+      linear-gradient(to top right, transparent 50%, #694d38 0),
+      linear-gradient(to bottom right, #694d38 50%, transparent 0);
+    }
+
   }
 
   &__day {
@@ -38,15 +85,37 @@
     color: #ffffff;
   }
 
+
   &__month {
     font-size: 16px;
     line-height: 16px;
     color: #ffffff;
   }
 
+  &__day,
+  &__month {
+    transition: color 0.1s linear;
+  }
+
+  &__link:active &__day,
+  &__link:active &__month {
+    color: rgba(255, 255, 255, 0.3);
+  }
+
   &__text {
     font-size: 18px;
     color: #000000;
+    transition: color 0.1s linear;
+  }
+
+  &__link:hover &__text{
+    color: #8a7061;
+    text-decoration: underline;
+  }
+
+  &__link:active &__text{
+    color: #755b4c;
+    text-decoration: underline;
   }
 
 }
@@ -54,8 +123,8 @@
 @media (min-width: 768px) {
 
   .news {
-
     padding-bottom: 5px;
+
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -68,6 +137,7 @@
       margin-bottom: 55px;
       font-size: 40px;
     }
+
     &__list {
       display: flex;
       width: 100%;
