--- a/source/assets/sass/chunks/reviews/reviews.scss
+++ b/source/assets/sass/chunks/reviews/reviews.scss
@@ -86,7 +86,7 @@
 
   .reviews {
     padding-bottom: 50px;
-    
+
     &::after {
       display: none;
     }
@@ -197,24 +197,33 @@
     &__list {
       width: 820px;
       margin: 0 20px;
+      border: none;
     }
 
     &__item {
-      align-items: center;
+      align-items: stretch;
       min-width: 820px;
       padding: 0;
-      border: solid 1px #e5ddd5;
-
     }
 
     &__image {
-      margin-right: 65px;
+      margin-right: 0;
     }
 
     &__author-image {
-      width: 250px;
-      height: 160px;
+      min-width: 250px;
+      min-height: 160px;
+      height: 100%;
       border-radius: 0;
+    }
+
+    &__inner {
+      display: flex;
+      flex-wrap: wrap;
+      align-content: center;
+      padding-left: 60px;
+      padding-right: 60px;
+      border: 1px solid #e5ddd5;
     }
 
     &__toggles {
