--- a/source/assets/sass/main.scss
+++ b/source/assets/sass/main.scss
@@ -51,6 +51,7 @@ button {
   padding: 13px 20px;
   font-size: 18px;
   font-weight: 700;
+  text-align: center;
   background-color: transparent;
   border: solid 1px #e5ddd5;
   transition: background-color 0.1s linear,
@@ -66,7 +67,6 @@ button {
   background-color: #d5c9bd;
   border-color: #d4cabe;
 }
-
 
 .page-container {
   overflow: hidden;
@@ -89,15 +89,39 @@ button {
   overflow: hidden
 }
 
+.section__title {
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.triangle {
+  position: absolute;
+  left: 0;
+  bottom: -36px;
+  z-index: 5;
+  width: 100%;
+  height: 36px;
+  background-color: #f8f5f2;
+  clip-path: polygon(0 0, 50% 100%, 100% 0);
+}
+
 /* SLIDER */
 @import "./chunks/slider/slider";
 
+/* INDEX  */
 @import "./chunks/header/header";
 @import "./chunks/stats/stats";
 @import "./chunks/advantages/advantages";
 @import "./chunks/news/news";
 @import "./chunks/reviews/reviews";
 @import "./chunks/footer/footer";
+
+/* OUR WORKS */
+@import "./chunks/portfolio/portfolio";
+@import "./chunks/price/price";
+
+
 
 
 @media (min-width: 768px) {
@@ -112,6 +136,16 @@ button {
     width: 160px;
   }
 
+
+  .section__title {
+    font-size: 40px;
+    text-align: left;
+  }
+
+  .triangle {
+    bottom: -45px;
+    height: 45px;
+  }
 }
 
 @media (min-width: 960px) {
