--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -32,9 +32,9 @@ table {
 
 body {
   margin: 0;
-  font-family: "PT Sans Narrow", Arial, sans-serif;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
   font-weight: 300;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 button {
@@ -97,10 +97,15 @@ fieldset {
   overflow: hidden;
 }
 
-.section__title {
+.section-header {
+  margin-bottom: 30px;
+}
+
+.section-title {
   font-size: 30px;
   font-weight: 700;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .triangle {
@@ -131,26 +136,24 @@ fieldset {
   opacity: 1;
 }
 
-/* SLIDER */
-
-.slider {
-  width: 280px;
-  margin: 0 auto;
+.main-link {
+  display: none;
+  text-transform: uppercase;
 }
 
-.slider__list {
+.slick-dots {
   display: flex;
-  overflow: hidden;
+  justify-content: center;
 }
 
-.slider__toggle {
+.slick-dots button {
   width: 10px;
   height: 10px;
   margin: 0 10px;
   font-size: 0;
 }
 
-.slider__toggle::after {
+.slick-dots button::after {
   display: block;
   width: 100%;
   height: 100%;
@@ -161,13 +164,73 @@ fieldset {
   content: "";
 }
 
-.slider__toggle:hover::after {
+.slick-dots button:hover::after {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.slider__toggle.active::after {
+.slick-dots button.active::after {
   background-color: rgb(255, 255, 255);
 }
+
+.slick-dots button .slick-active::after {
+  background-color: #ffffff;
+}
+
+.slick-active button::after {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+/* SLIDER */
+
+/* .slider {
+
+  width: 280px;
+  margin: 0 auto;
+  overflow: hidden;
+
+  &__list {
+    position: relative;
+    left: 0;
+    display: flex;
+    pointer-events: none;
+  }
+
+  &__toggle {
+    width: 10px;
+    height: 10px;
+    margin: 0 10px;
+    font-size: 0;
+
+    &::after {
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: transparent;
+      border: solid 1px rgba(255, 255, 255, .6);
+      transform: rotate(45deg);
+      transition: background-color .1s;
+      content: "";
+    }
+
+    &:hover::after {
+      background-color: rgba(255, 255, 255, .3);
+    }
+
+    &.active::after {
+      background-color: rgba(255, 255, 255, 1);
+    }
+
+  }
+
+}
+
+@media (min-width: 768px) {
+
+  .slider {
+    width: auto;
+  }
+
+} */
 
 /* INDEX  */
 
@@ -175,22 +238,28 @@ fieldset {
   background-color: #242424;
 }
 
+.header .container {
+  padding: 0;
+}
+
 .header__logo {
   display: block;
   width: 226px;
+  min-height: 80px;
   margin: 0 auto;
-  padding: 25px 0;
+  font-size: 0;
   text-align: center;
-}
-
-.header-tablet {
-  display: none;
+  background-image: url("../images/header/header-mob.png");
+  background-size: 226px 30px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .nav {
   position: relative;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
+  background-color: #826550;
 }
 
 .nav__title {
@@ -217,8 +286,8 @@ fieldset {
   left: calc(50% - 18px);
   width: 36px;
   height: 2px;
-  background-color: #fff;
-  box-shadow: 0 8px 0 0 #fff, 0 -8px 0 0 #fff;
+  background-color: #ffffff;
+  box-shadow: 0 8px 0 0 #ffffff, 0 -8px 0 0 #ffffff;
   content: "";
   transition: background-color 0.02s linear, box-shadow 0.02s linear;
 }
@@ -232,23 +301,17 @@ fieldset {
   box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.6), 0 -8px 0 0 rgba(255, 255, 255, 0.6);
 }
 
-.nav--mob {
-  background-color: #826550;
-}
-
-.nav--mob .nav__list {
+.nav__list {
   position: absolute;
   top: 0;
   right: -250px;
+  z-index: 5;
   width: 250px;
   background-color: #6a4d38;
-}
-
-.nav--mob .site-list {
   transition: right 0.2s;
 }
 
-.nav--mob .site-list::before {
+.site-list::before {
   position: absolute;
   top: 0;
   left: 0;
@@ -258,30 +321,27 @@ fieldset {
   content: "";
 }
 
-.nav--mob .site-list__link {
+.site-list__link {
   display: block;
   width: 100%;
   padding: 15px 20px;
+  font-size: 18px;
+  font-weight: 700;
   text-align: left;
   text-transform: uppercase;
-  color: #fff;
+  color: #ffffff;
   background-color: #826550;
   border-top: solid 1px #886e5b;
   border-bottom: solid 1px #71543f;
   transition: background-color 0.02s linear, color 0.02s linear;
 }
 
-.nav--mob .site-list__link:hover {
+.site-list__link:hover {
   background-color: #755a47;
 }
 
-.nav--mob .site-list__link:active {
+.site-list__link:active {
   color: rgba(255, 255, 255, 0.6);
-}
-
-.site-list__link {
-  font-size: 18px;
-  font-weight: 700;
 }
 
 .user-list__btn {
@@ -402,18 +462,15 @@ fieldset {
   background-color: #242424;
 }
 
-.advantages::after {
-  position: absolute;
-  left: 50%;
-  bottom: -40px;
-  width: 100%;
-  height: 40px;
-  background-image: linear-gradient(to top right, transparent 50%, #242424 0), linear-gradient(to bottom right, #242424 50%, transparent 0);
-  background-size: 50% 100%;
-  background-repeat: no-repeat;
-  background-position: left, right;
-  transform: translateX(-50%);
-  content: "";
+.advantages .triangle {
+  background-color: #242424;
+}
+
+.advantages__slider {
+  width: 280px;
+  margin: 0 auto;
+  padding-bottom: 10px;
+  user-select: none;
 }
 
 .advantages__item {
@@ -452,10 +509,6 @@ fieldset {
   color: #ffffff;
 }
 
-.advantages__toggles {
-  text-align: center;
-}
-
 .news {
   padding: 70px 0 25px 0;
   background-color: #f8f5f2;
@@ -464,10 +517,6 @@ fieldset {
 
 .news__title {
   margin-bottom: 10px;
-  font-size: 30px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
 }
 
 .news__link {
@@ -490,35 +539,26 @@ fieldset {
   margin-right: 20px;
 }
 
-.news__date::after {
-  position: absolute;
-  left: 50%;
+.news__date .triangle {
   bottom: -10px;
-  width: 100%;
   height: 10px;
-  background-image: linear-gradient(to top right, transparent 50%, #000000 0), linear-gradient(to bottom right, #000000 50%, transparent 0);
-  background-size: 50% 100%;
-  background-repeat: no-repeat;
-  background-position: left, right;
-  transform: translateX(-50%);
-  content: "";
-  transition: color 0.1s linear, background-color 0.1s linear, background-image 0.1s linear;
+  background-color: #000000;
 }
 
 .news__link:hover .news__date {
   background-color: #755b4c;
 }
 
-.news__link:hover .news__date::after {
-  background-image: linear-gradient(to top right, transparent 50%, #755b4c 0), linear-gradient(to bottom right, #755b4c 50%, transparent 0);
+.news__link:hover .news__date .triangle {
+  background-color: #755b4c;
 }
 
 .news__link:active .news__date {
   background-color: #694d38;
 }
 
-.news__link:active .news__date::after {
-  background-image: linear-gradient(to top right, transparent 50%, #694d38 0), linear-gradient(to bottom right, #694d38 50%, transparent 0);
+.news__link:active .news__date .triangle {
+  background-color: #694d38;
 }
 
 .news__day {
@@ -567,25 +607,12 @@ fieldset {
   background-color: #f8f5f2;
 }
 
-.reviews::after {
-  position: absolute;
-  left: 50%;
-  bottom: -39px;
-  width: 100%;
-  height: 40px;
-  background-image: linear-gradient(to top right, transparent 50%, #f8f5f2 0), linear-gradient(to bottom right, #f8f5f2 50%, transparent 0);
-  background-size: 50% 100%;
-  background-repeat: no-repeat;
-  background-position: left, right;
-  transform: translateX(-50%);
-  content: "";
+.reviews .slick-slide {
+  display: flex;
 }
 
 .reviews__title {
   margin-bottom: 30px;
-  font-size: 30px;
-  font-weight: 700;
-  text-align: center;
 }
 
 .reviews__write {
@@ -598,12 +625,8 @@ fieldset {
 }
 
 .reviews__list {
-  margin-bottom: 30px;
-}
-
-.reviews__item {
-  display: flex;
-  min-width: 280px;
+  width: 280px;
+  margin: 0 auto 30px auto;
 }
 
 .reviews__image {
@@ -622,20 +645,26 @@ fieldset {
   line-height: 27px;
 }
 
-.reviews__toggles {
-  text-align: center;
+.reviews .slick-dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.reviews__toggles .slider__toggle::after {
-  border: solid 1px rgba(54, 54, 54, 0.5);
+.reviews .slick-dots button::after {
+  border: solid 1px #353535;
 }
 
-.reviews__toggles .slider__toggle:hover::after {
-  background-color: rgba(54, 54, 54, 0.5);
+.reviews .slick-dots button:hover::after {
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
-.reviews__toggles .slider__toggle.active::after {
-  background-color: rgb(54, 54, 54);
+.reviews .slick-dots button.active::after {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.reviews .slick-active button::after {
+  background-color: #353535;
 }
 
 .footer {
@@ -687,7 +716,7 @@ fieldset {
 }
 
 .social__item {
-  width: 33.333%;
+  width: 33.33%;
   height: 103px;
   font-size: 0;
 }
@@ -797,14 +826,6 @@ fieldset {
 .portfolio__best-flag::before {
   bottom: 0;
   clip-path: polygon(0 100%, -2% 0, 44% 32px);
-}
-
-.portfolio__header {
-  margin-bottom: 30px;
-}
-
-.portfolio__link {
-  display: none;
 }
 
 .portfolio__item,
@@ -940,14 +961,11 @@ fieldset {
 
 .price__discount-time {
   padding: 17px 20px 17px 110px;
-  border: 1px solid #484848;
-}
-
-.price__discount-time {
   background-image: url("../images/portfolio/clock-icon.png");
   background-size: 57px;
   background-position: 25px center;
   background-repeat: no-repeat;
+  border: 1px solid #484848;
 }
 
 .price__discount-time__text {
@@ -967,10 +985,6 @@ fieldset {
 .appointment .container {
   max-width: 320px;
   margin: 0 auto;
-}
-
-.appointment__title {
-  margin-bottom: 30px;
 }
 
 .appointment__row {
@@ -1075,7 +1089,7 @@ fieldset {
   display: block;
 }
 
-.appointment .appointment__submit {
+.appointment__submit {
   margin-top: 30px;
   text-transform: uppercase;
   color: #f8f5f2;
@@ -1083,82 +1097,50 @@ fieldset {
   border: none;
 }
 
-@media (min-width: 640px) {
-  .portfolio__best-flag {
-    top: 30px;
-  }
-
-  .portfolio__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 60px;
-  }
-
-  .portfolio__link {
-    display: block;
-  }
-
-  .portfolio__item,
-  .portfolio__item-best {
-    display: flex;
-    width: 640px;
-    padding-bottom: 0;
-  }
-
-  .portfolio__image-block,
-  .portfolio__image-block-best {
-    width: auto;
-    min-width: 270px;
-  }
-
-  .portfolio__image-block {
-    height: 293px;
-  }
-
-  .portfolio__image-block-best {
-    height: 480px;
-  }
-
-  .portfolio__desc {
-    padding: 40px 50px;
-  }
-
-  .portfolio__name {
-    margin-bottom: 30px;
-  }
-
-  .portfolio__action-list {
-    padding: 0 90px 30px 30px;
-  }
+.appointment__submit.button {
+  width: 100%;
 }
 
-@media (min-width: 768px) {
-  .slider {
-    width: auto;
-  }
-
+@media (min-width: 640px) {
   .header {
-    background-color: #000000;
+    position: relative;
   }
 
-  .header-mob {
-    display: none;
-  }
-
-  .header-tablet {
-    display: block;
-  }
-
-  .header-tablet .container {
+  .header .container {
     width: 670px;
   }
 
+  .header__logo {
+    display: none;
+    position: absolute;
+    top: 110px;
+    left: calc(50% - 185px);
+    width: 370px;
+    height: 101px;
+    background-image: url("../images/stats/logo.png");
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .nav {
+    background-color: #000000;
+  }
+
+  .nav__title {
+    display: none;
+  }
+
+  .nav__toggle {
+    display: none;
+  }
+
+  .nav__list {
+    position: static;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    overflow: hidden;
+    width: auto;
+    background-color: #000000;
   }
 
   .site-list {
@@ -1166,30 +1148,14 @@ fieldset {
     flex-wrap: wrap;
   }
 
+  .site-list::before {
+    display: none;
+  }
+
   .site-list__link {
-    position: relative;
-    display: block;
     padding: 25px 15px;
-    transition: color 0.1s linear;
-  }
-
-  .site-list__link--active::before {
-    position: absolute;
-    left: 50%;
-    bottom: -2px;
-    width: 56%;
-    height: 3px;
-    background-color: #816550;
-    transform: translateX(-50%);
-    content: "";
-  }
-
-  .site-list__link:hover {
-    color: #83644f;
-  }
-
-  .site-list__link:active {
-    color: rgba(255, 255, 255, 0.5);
+    background-color: #000000;
+    border: none;
   }
 
   .user-list {
@@ -1198,23 +1164,10 @@ fieldset {
   }
 
   .user-list__btn {
-    font-size: 0;
+    min-width: 60px;
     height: 100%;
-    min-height: 16px;
-    transition: opacity 0.1s;
-  }
-
-  .user-list__btn:hover {
-    background-color: transparent;
-    opacity: 0.8;
-  }
-
-  .user-list__btn:active {
-    background-color: transparent;
-    opacity: 0.5;
-  }
-
-  .login-icon {
+    min-height: 72px;
+    font-size: 0;
     background-position: center;
   }
 
@@ -1305,16 +1258,12 @@ fieldset {
     background-color: #353535;
   }
 
-  .advantages::after {
-    background-image: linear-gradient(to top right, transparent 50%, #353535 0), linear-gradient(to bottom right, #353535 50%, transparent 0);
+  .advantages .triangle {
+    background-color: #353535;
   }
 
   .advantages__slider {
     width: auto;
-  }
-
-  .advantages__list {
-    flex-wrap: wrap;
   }
 
   .advantages__item {
@@ -1354,9 +1303,7 @@ fieldset {
   }
 
   .news__title {
-    margin-left: 40px;
     margin-bottom: 55px;
-    font-size: 40px;
   }
 
   .news__list {
@@ -1379,7 +1326,7 @@ fieldset {
     padding-bottom: 50px;
   }
 
-  .reviews::after {
+  .reviews .triangle {
     display: none;
   }
 
@@ -1388,6 +1335,16 @@ fieldset {
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-between;
+  }
+
+  .reviews .slick-dots {
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    padding: 0 10px;
+    background-color: #f8f5f2;
+    transform: translateX(-50%);
+    border-radius: 10px 10px 0 0;
   }
 
   .reviews__write {
@@ -1403,7 +1360,7 @@ fieldset {
   .reviews__next {
     position: relative;
     display: block;
-    width: 50px;
+    min-width: 50px;
     font-size: 0;
     border: solid 1px #e5ddd5;
   }
@@ -1431,7 +1388,8 @@ fieldset {
   }
 
   .reviews__list {
-    width: 540px;
+    display: flex;
+    width: 640px;
     margin-bottom: 0;
     border-top: solid 1px #e5ddd5;
     border-bottom: solid 1px #e5ddd5;
@@ -1507,16 +1465,62 @@ fieldset {
     padding: 0;
   }
 
+  .portfolio {
+    padding-bottom: 20px;
+  }
+
+  .portfolio__best-flag {
+    top: 30px;
+  }
+
+  .portfolio__item,
+  .portfolio__item-best {
+    display: flex;
+    width: 640px;
+    margin-bottom: 40px;
+    padding-bottom: 0;
+  }
+
+  .portfolio__image-block,
+  .portfolio__image-block-best {
+    width: auto;
+    min-width: 270px;
+  }
+
+  .portfolio__image-block {
+    height: 293px;
+  }
+
+  .portfolio__image-block-best {
+    height: 480px;
+  }
+
+  .portfolio__desc {
+    padding: 40px 50px;
+  }
+
+  .portfolio__name {
+    margin-bottom: 30px;
+  }
+
+  .portfolio__action-list {
+    padding: 0 90px 30px 30px;
+  }
+
   .price {
     padding: 80px 0 55px;
+  }
+
+  .price .triangle {
+    display: none;
   }
 
   .price__title {
     margin-bottom: 50px;
   }
 
-  .price .triangle {
-    display: none;
+  .price__table {
+    margin-bottom: 8px;
   }
 
   .price__row-num {
@@ -1569,16 +1573,8 @@ fieldset {
     max-width: 640px;
   }
 
-  .appointment .button {
-    width: 100%;
-  }
-
   .appointment .triangle {
     display: none;
-  }
-
-  .appointment__set {
-    margin-top: 40px;
   }
 
   .appointment__row--1 {
@@ -1607,6 +1603,7 @@ fieldset {
   }
 
   .appointment__set {
+    margin-top: 40px;
     text-align: center;
     border-top: 1px solid #e5ddd5;
   }
@@ -1642,7 +1639,14 @@ fieldset {
     width: 160px;
   }
 
-  .section__title {
+  .section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 60px;
+  }
+
+  .section-title {
     font-size: 40px;
     text-align: left;
   }
@@ -1651,70 +1655,55 @@ fieldset {
     bottom: -45px;
     height: 45px;
   }
+
+  .main-link {
+    display: block;
+  }
 }
 
 @media (min-width: 960px) {
-  .header-tablet .container {
+  .header .container {
     width: 960px;
   }
 
-  .site-list {
-    display: flex;
-    flex-wrap: wrap;
+  .header__logo {
+    top: 125px;
+    left: calc(50% - 185px);
+    width: 370px;
+    height: 153px;
+    background-image: url("../images/stats/logo-desk.png");
+    background-size: auto 100%;
+    background-position: center;
   }
 
   .site-list__link {
-    position: relative;
-    display: block;
-    padding: 25px 25px;
-    transition: background-color 0.1s linear, color 0.1s linear;
-  }
-
-  .site-list__link--active::before {
-    position: absolute;
-    left: 50%;
-    bottom: -2px;
-    width: 56%;
-    height: 3px;
-    background-color: #816550;
-    transform: translateX(-50%);
-    content: "";
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .site-list__link:hover {
-    color: #000;
-    background-color: #fff;
+    color: #000000;
+    background-color: #ffffff;
   }
 
   .site-list__link:active {
-    color: rgba(0, 0, 0, 0.4);
-    background-color: #fff;
+    color: rgba(0, 0, 0, 0.5);
   }
 
   .user-list__btn {
     font-size: 18px;
-    padding-left: 50px;
     font-weight: 700;
     text-transform: uppercase;
-    transition: color 0.1s, background-color 0.1s;
-    transition: color 0.1s, background-color 0.1s;
-    color: #ffffff;
+    background-position: 10px center;
   }
 
   .user-list__btn:hover {
-    color: #000;
+    color: #000000;
     background-color: #ffffff;
-    opacity: 1;
   }
 
   .user-list__btn:active {
-    color: rgba(0, 0, 0, 0.4);
-    background-color: #fff;
-    opacity: 1;
-  }
-
-  .user-list .login-icon {
-    background-position: 20px center;
+    color: rgba(0, 0, 0, 0.5);
   }
 
   .stats {
@@ -1759,17 +1748,14 @@ fieldset {
     padding: 50px 0;
   }
 
-  .advantages::after {
-    height: 65px;
-    bottom: -65px;
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .advantages__item {
     width: 33.33%;
     min-width: 320px;
-    padding-top: 150px;
-    padding-left: 0;
-    padding: 0 45px;
     padding: 150px 35px 0 35px;
     background-repeat: no-repeat;
     background-position: center 20px;
@@ -1785,25 +1771,34 @@ fieldset {
     text-align: center;
   }
 
+  .news__title {
+    margin-left: 70px;
+  }
+
   .reviews {
     padding-bottom: 100px;
   }
 
+  .reviews__slider {
+    width: 100%;
+  }
+
   .reviews__title {
-    margin-left: 40px;
-    font-size: 40px;
-    text-align: left;
+    margin-left: 70px;
   }
 
   .reviews__list {
-    width: 820px;
-    margin: 0 20px;
+    justify-content: space-between;
+    width: 100%;
     border: none;
+  }
+
+  .reviews .slick-list {
+    max-width: 820px;
   }
 
   .reviews__item {
     align-items: stretch;
-    min-width: 820px;
     padding: 0;
   }
 
@@ -1901,10 +1896,6 @@ fieldset {
     display: none;
   }
 
-  .portfolio__header {
-    margin-bottom: 40px;
-  }
-
   .portfolio__best-flag {
     left: auto;
     right: 0;
@@ -1916,11 +1907,11 @@ fieldset {
   }
 
   .portfolio__best-flag::before {
-    clip-path: polygon(32% 100%, 92% 0px, 92% 32px);
+    clip-path: polygon(32% 100%, 92% 0, 92% 32px);
   }
 
   .portfolio__best-flag::after {
-    clip-path: polygon(4px 0, 92% 0px, 92% 32px);
+    clip-path: polygon(4px 0, 92% 0, 92% 32px);
   }
 
   .portfolio__list {
@@ -1964,7 +1955,11 @@ fieldset {
   }
 
   .price {
-    padding: 60px 0 80px;
+    padding: 70px 0 80px;
+  }
+
+  .price__title {
+    margin-bottom: 30px;
   }
 
   .price__table {
@@ -2011,8 +2006,18 @@ fieldset {
     width: 33.33%;
   }
 
+  .appointment__submit {
+    height: 70px;
+    margin-top: 70px;
+    font-size: 24px;
+  }
+
   .container {
     width: 960px;
     margin: 0 auto;
+  }
+
+  .section-header {
+    margin-bottom: 40px;
   }
 }
