--- a/source/assets/sass/chunks/advantages.scss
+++ b/source/assets/sass/chunks/advantages.scss
@@ -3,20 +3,15 @@
   padding-bottom: 10px;
   background-color: #242424;
 
-  &::after {
-    position: absolute;
-    left: 50%;
-    bottom: -40px;
-    width: 100%;
-    height: 40px;
-    background-image:
-      linear-gradient(to top right, transparent 50%, #242424 0),
-      linear-gradient(to bottom right, #242424 50%, transparent 0);
-    background-size: 50% 100%;
-    background-repeat: no-repeat;
-    background-position: left, right;
-    transform: translateX(-50%);
-    content: "";
+  .triangle {
+    background-color: #242424;
+  }
+
+  &__slider {
+    width: 280px;
+    margin: 0 auto;
+    padding-bottom: 10px;
+    user-select: none;
   }
 
   &__item {
@@ -56,29 +51,20 @@
     color: #ffffff;
   }
 
-  &__toggles {
-    text-align: center;
-  }
-
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 640px) {
 
   .advantages {
     background-color: #353535;
-    &::after {
-      background-image:
-        linear-gradient(to top right, transparent 50%, #353535 0),
-        linear-gradient(to bottom right, #353535 50%, transparent 0);
+
+    .triangle {
+      background-color: #353535;
     }
 
-    &__slider {
+    &__slider{
       width: auto;
-    }
-
-    &__list {
-      flex-wrap: wrap;
     }
 
     &__item {
@@ -117,17 +103,14 @@
   .advantages {
     padding: 50px 0;
 
-    &::after {
-      height: 65px;
-      bottom: -65px;
+    &__list{
+      display: flex;
+      flex-wrap: wrap;
     }
 
     &__item {
       width: 33.33%;
       min-width: 320px;
-      padding-top: 150px;
-      padding-left: 0;
-      padding: 0 45px;
       padding: 150px 35px 0 35px;
       background-repeat: no-repeat;
       background-position: center 20px;
