--- a/source/assets/sass/chunks/header.scss
+++ b/source/assets/sass/chunks/header.scss
@@ -1,23 +1,30 @@
 .header {
   background-color: #242424;
 
+  .container {
+    padding: 0;
+  }
+
   &__logo {
     display: block;
     width: 226px;
+    min-height: 80px;
     margin: 0 auto;
-    padding: 25px 0;
+    font-size: 0;
     text-align: center;
+    background-image: url("../images/header/header-mob.png");
+    background-size: 226px 30px;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
-  &-tablet {
-    display: none;
-  }
 }
 
 .nav {
   position: relative;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
+  background-color: #826550;
 
   &__title {
     padding: 13px 0;
@@ -43,9 +50,9 @@
       left: calc(50% - 18px);
       width: 36px;
       height: 2px;
-      background-color: #fff;
-      box-shadow: 0 8px 0 0 #fff,
-      0 -8px 0 0 #fff;
+      background-color: #ffffff;
+      box-shadow: 0 8px 0 0 #ffffff,
+      0 -8px 0 0 #ffffff;
       content: "";
       transition: background-color .02s linear,
       box-shadow .02s linear;
@@ -63,62 +70,55 @@
 
   }
 
-}
-
-.nav--mob {
-  background-color: #826550;
-
-  .nav__list {
+  &__list {
     position: absolute;
     top: 0;
     right: -250px;
+    z-index: 5;
     width: 250px;
     background-color: #6a4d38;
-  }
-
-  .site-list {
     transition: right 0.2s;
-
-    &::before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 7px;
-      height: 100%;
-      background: linear-gradient(to right,rgba(0, 0, 0, .4) 5%,rgba(0,0,0,0) 100%);
-      content: "";
-    }
-
-    &__link {
-      display: block;
-      width: 100%;
-      padding: 15px 20px;
-      text-align: left;
-      text-transform: uppercase;
-      color: #fff;
-      background-color: #826550;
-      border-top: solid 1px #886e5b;
-      border-bottom: solid 1px #71543f;
-      transition: background-color .02s linear,
-      color .02s linear;
-
-      &:hover {
-        background-color: #755a47;
-      }
-
-      &:active {
-        color: rgba(255, 255, 255, .6);
-      }
-
-    }
-
   }
 
 }
 
-.site-list__link {
-  font-size: 18px;
-  font-weight: 700;
+.site-list {
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 7px;
+    height: 100%;
+    background: linear-gradient(to right,rgba(0, 0, 0, .4) 5%,rgba(0,0,0,0) 100%);
+    content: "";
+  }
+
+  &__link {
+    display: block;
+    width: 100%;
+    padding: 15px 20px;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: left;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: #826550;
+    border-top: solid 1px #886e5b;
+    border-bottom: solid 1px #71543f;
+    transition: background-color 0.02s linear,
+    color 0.02s linear;
+
+    &:hover {
+      background-color: #755a47;
+    }
+
+    &:active {
+      color: rgba(255, 255, 255, .6);
+    }
+
+  }
+
 }
 
 .user-list {
@@ -151,62 +151,64 @@
   background-size: 16px 16px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 640px) {
 
   .header {
-    background-color: #000000;
+    position: relative;
 
-    &-mob {
-      display: none;
+
+    .container {
+      width: 670px;
     }
 
-    &-tablet {
-      display: block;
-
-      .container {
-        width: 670px;
-      }
-
+    &__logo {
+      display: none;
+      position: absolute;
+      top: 110px;
+      left: calc(50% - 185px);
+      width: 370px;
+      height: 101px;
+      background-image: url("../images/stats/logo.png");
+      background-size: auto 100%;
+      background-repeat: no-repeat;
+      background-position: center;
     }
 
   }
 
   .nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    overflow: hidden;
+    background-color: #000000;
+
+    &__title {
+      display: none;
+    }
+
+    &__toggle {
+      display: none;
+    }
+
+    &__list {
+      position: static;
+      display: flex;
+      justify-content: space-between;
+      width: auto;
+      background-color: #000000;
+    }
+
   }
 
   .site-list {
     display: flex;
     flex-wrap: wrap;
 
+    &::before {
+      display: none;
+    }
+
     &__link {
-      position: relative;
-      display: block;
       padding: 25px 15px;
-      transition: color 0.1s linear;
-
-      &--active::before {
-        position: absolute;
-        left: 50%;
-        bottom: -2px;
-        width: 56%;
-        height: 3px;
-        background-color: #816550;
-        transform: translateX(-50%);
-        content: "";
-      }
-
-      &:hover {
-        color: #83644f;
-      }
-
-      &:active {
-        color: rgba(255, 255, 255, .5);
-      }
-
+      background-color: #000000;
+      border: none;
     }
 
   }
@@ -216,70 +218,50 @@
     flex-wrap: wrap;
 
     &__btn {
-      font-size: 0;
+      min-width: 60px;
       height: 100%;
-      min-height: 16px;
-      transition: opacity .1s;
-
-      &:hover {
-        background-color: transparent;
-        opacity: .8;
-      }
-
-      &:active {
-        background-color: transparent;
-        opacity: .5;
-      }
+      min-height: 72px;
+      font-size: 0;
+      background-position: center;
     }
 
-  }
-
-  .login-icon {
-    background-position: center;
   }
 
 }
 
 @media (min-width: 960px) {
 
-  .header-tablet {
+  .header {
 
     .container {
       width: 960px;
     }
 
+    &__logo {
+      top: 125px;
+      left: calc(50% - 185px);
+      width: 370px;
+      height: 153px;
+      background-image: url("../images/stats/logo-desk.png");
+      background-size: auto 100%;
+      background-position: center;
+    }
+
   }
 
   .site-list {
-    display: flex;
-    flex-wrap: wrap;
 
     &__link {
-      position: relative;
-      display: block;
-      padding: 25px 25px;
-      transition: background-color 0.1s linear,
-      color 0.1s linear;
-
-      &--active::before {
-        position: absolute;
-        left: 50%;
-        bottom: -2px;
-        width: 56%;
-        height: 3px;
-        background-color: #816550;
-        transform: translateX(-50%);
-        content: "";
-      }
+      padding-left: 30px;
+      padding-right: 30px;
 
       &:hover {
-        color: #000;
-        background-color: #fff;
+        color: #000000;
+        background-color: #ffffff;
       }
 
       &:active {
-        color: rgba(0, 0, 0, .4);
-        background-color: #fff;
+        color: rgba(0, 0, 0, 0.5);
       }
 
     }
@@ -290,31 +272,19 @@
 
     &__btn {
       font-size: 18px;
-      padding-left: 50px;
       font-weight: 700;
       text-transform: uppercase;
-      transition: color 0.1s,
-      background-color 0.1s;
-      transition: color 0.1s,
-      background-color 0.1s;
-      color: #ffffff;
+      background-position: 10px center;
 
       &:hover {
-        color: #000;
+        color: #000000;
         background-color: #ffffff;
-        opacity: 1;
       }
 
       &:active {
-        color: rgba(0, 0, 0, .4);
-        background-color: #fff;
-        opacity: 1;
+        color: rgba(0, 0, 0, 0.5);
       }
 
-    }
-
-    .login-icon {
-      background-position: 20px center;
     }
 
   }
