--- a/source/assets/sass/chunks/news.scss
+++ b/source/assets/sass/chunks/news.scss
@@ -5,13 +5,6 @@
 
   &__title {
     margin-bottom: 10px;
-    font-size: 30px;
-    font-weight: 700;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  &__item {
   }
 
   &__link {
@@ -34,34 +27,18 @@
     background-color: #000000;
     margin-right: 20px;
 
-    &::after {
-      position: absolute;
-      left: 50%;
+    .triangle {
       bottom: -10px;
-      width: 100%;
       height: 10px;
-      background-image:
-        linear-gradient(to top right, transparent 50%, #000000 0),
-        linear-gradient(to bottom right, #000000 50%, transparent 0);
-      background-size: 50% 100%;
-      background-repeat: no-repeat;
-      background-position: left, right;
-      transform: translateX(-50%);
-      content: "";
-      transition: color 0.1s linear,
-      background-color 0.1s linear,
-      background-image 0.1s linear;
+      background-color: #000000;
     }
-
   }
 
   &__link:hover &__date{
     background-color: #755b4c;
 
-    &::after {
-      background-image:
-      linear-gradient(to top right, transparent 50%, #755b4c 0),
-      linear-gradient(to bottom right, #755b4c 50%, transparent 0);
+    .triangle {
+      background-color: #755b4c;
     }
 
   }
@@ -69,10 +46,8 @@
   &__link:active &__date{
     background-color: #694d38;
 
-    &::after {
-      background-image:
-      linear-gradient(to top right, transparent 50%, #694d38 0),
-      linear-gradient(to bottom right, #694d38 50%, transparent 0);
+    .triangle {
+      background-color: #694d38;
     }
 
   }
@@ -120,7 +95,7 @@
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 640px) {
 
   .news {
     padding-bottom: 5px;
@@ -133,9 +108,7 @@
     }
 
     &__title {
-      margin-left: 40px;
       margin-bottom: 55px;
-      font-size: 40px;
     }
 
     &__list {
@@ -152,6 +125,17 @@
 
     &__date {
       margin-right: 10px;
+    }
+
+  }
+
+}
+
+@media (min-width: 960px){
+  
+  .news {
+    &__title {
+      margin-left: 70px;
     }
 
   }
