--- a/source/assets/sass/chunks/reviews.scss
+++ b/source/assets/sass/chunks/reviews.scss
@@ -3,28 +3,14 @@
   padding: 25px 0 15px 0;
   background-color: #f8f5f2;
 
-  &::after {
-    position: absolute;
-    left: 50%;
-    bottom: -39px;
-    width: 100%;
-    height: 40px;
-    background-image:
-      linear-gradient(to top right, transparent 50%, #f8f5f2 0),
-      linear-gradient(to bottom right, #f8f5f2 50%, transparent 0);
-    background-size: 50% 100%;
-    background-repeat: no-repeat;
-    background-position: left, right;
-    transform: translateX(-50%);
-    content: "";
+  .slick-slide {
+    display: flex;
   }
 
   &__title {
     margin-bottom: 30px;
-    font-size: 30px;
-    font-weight: 700;
-    text-align: center;
   }
+
   &__write {
     display: none;
   }
@@ -35,12 +21,8 @@
   }
 
   &__list {
-    margin-bottom: 30px;
-  }
-
-  &__item {
-    display: flex;
-    min-width: 280px;
+    width: 280px;
+    margin: 0 auto 30px auto;
   }
 
   &__image {
@@ -59,35 +41,42 @@
     line-height: 27px;
   }
 
-  &__toggles {
-    text-align: center;
+  .slick-dots{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 
-    .slider__toggle {
+    button {
 
       &::after {
-        border: solid 1px rgba(54, 54, 54, .5);
+        border: solid 1px #353535;
       }
 
       &:hover::after {
-        background-color: rgba(54, 54, 54, 0.5);
+        background-color: rgba(255, 255, 255, 0.6)
       }
 
       &.active::after {
-        background-color: rgba(54, 54, 54, 1);
+        background-color: rgba(255, 255, 255, 0.3);
       }
 
     }
 
   }
+
+  .slick-active button::after {
+    background-color: #353535;
+  }
+
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 640px) {
 
   .reviews {
     padding-bottom: 50px;
 
-    &::after {
+    .triangle {
       display: none;
     }
 
@@ -96,6 +85,17 @@
       flex-wrap: wrap;
       align-items: flex-start;
       justify-content: space-between;
+    }
+
+    .slick-dots {
+      position: absolute;
+      left: 50%;
+      bottom: -5px;
+      padding: 0 10px;
+      background-color: #f8f5f2;
+      transform: translateX(-50%);
+      border-radius: 10px 10px 0 0;
+
     }
 
     &__write{
@@ -111,7 +111,7 @@
     &__next {
       position: relative;
       display: block;
-      width: 50px;
+      min-width: 50px;
       font-size: 0;
       border: solid 1px #e5ddd5;
 
@@ -149,7 +149,8 @@
     }
 
     &__list {
-      width: 540px;
+      display: flex;
+      width: 640px;
       margin-bottom: 0;
       border-top: solid 1px #e5ddd5;
       border-bottom: solid 1px #e5ddd5;
@@ -188,21 +189,26 @@
   .reviews {
     padding-bottom: 100px;
 
+    &__slider {
+      width: 100%;
+    }
+
     &__title {
-      margin-left: 40px;
-      font-size: 40px;
-      text-align: left;
+      margin-left: 70px;
     }
 
     &__list {
-      width: 820px;
-      margin: 0 20px;
+      justify-content: space-between;
+      width: 100%;
       border: none;
+    }
+
+    .slick-list {
+      max-width: 820px;
     }
 
     &__item {
       align-items: stretch;
-      min-width: 820px;
       padding: 0;
     }
 
