--- a/source/assets/sass/main.scss
+++ b/source/assets/sass/main.scss
@@ -32,9 +32,9 @@ table {
 
 body {
   margin: 0;
-  font-family: 'PT Sans Narrow', Arial, sans-serif;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
   font-weight: 300;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 button {
@@ -99,10 +99,15 @@ fieldset {
   overflow: hidden
 }
 
-.section__title {
+.section-header {
+  margin-bottom: 30px;
+}
+
+.section-title {
   font-size: 30px;
   font-weight: 700;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .triangle {
@@ -133,6 +138,52 @@ fieldset {
   opacity: 1;
 }
 
+.main-link {
+  display: none;
+  text-transform: uppercase;
+}
+
+.slick-dots{
+  display: flex;
+  justify-content: center;
+
+  button {
+    width: 10px;
+    height: 10px;
+    margin: 0 10px;
+    font-size: 0;
+
+    &::after {
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: transparent;
+      border: solid 1px rgba(255, 255, 255, .6);
+      transform: rotate(45deg);
+      transition: background-color .1s;
+      content: "";
+    }
+
+    &:hover::after {
+      background-color: rgba(255, 255, 255, .3);
+    }
+
+    &.active::after {
+      background-color: rgba(255, 255, 255, 1);
+    }
+
+    .slick-active::after {
+      background-color: #ffffff;
+    }
+
+  }
+
+}
+
+.slick-active button::after {
+  background-color: rgba(255, 255, 255, .6);;
+}
+
 /* SLIDER */
 @import "./chunks/slider";
 
@@ -153,7 +204,7 @@ fieldset {
 
 
 
-@media (min-width: 768px) {
+@media (min-width: 640px) {
 
   .container {
     width: 640px;
@@ -165,8 +216,14 @@ fieldset {
     width: 160px;
   }
 
+  .section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 60px;
+  }
 
-  .section__title {
+  .section-title {
     font-size: 40px;
     text-align: left;
   }
@@ -174,6 +231,10 @@ fieldset {
   .triangle {
     bottom: -45px;
     height: 45px;
+  }
+
+  .main-link {
+    display: block;
   }
 }
 
@@ -184,4 +245,7 @@ fieldset {
     margin: 0 auto;
   }
 
+  .section-header {
+    margin-bottom: 40px
+  }
 }
