--- a/source/assets/sass/chunks/footer.scss
+++ b/source/assets/sass/chunks/footer.scss
@@ -66,7 +66,7 @@
     background-repeat: no-repeat;
     background-position: center;
     border: solid 1px rgba(255, 255, 255, 0.2);
-    transform: border-color 0.1s linear,
+    transition: border-color 0.1s linear,
     background-color 0.1s linear;
 
     &:hover {
@@ -75,7 +75,7 @@
 
     &:active {
       background-color: #252525;
-      border: none;
+      border-color: transparent;
     }
 
     &--vk {
@@ -120,7 +120,7 @@
 .footer__btn:active {
   color: rgba(255, 255, 255, .6);
   background-color: #252525;
-  border-color: none;
+  border-color: transparent;
 }
 
 @media (min-width: 640px) {
